# i3blank

./: CMakeLists.txt  README.md  main.c
